@@ -34,12 +34,16 @@
    <field name="id" type="text" indexed="true" stored="true" multiValued="false" required="false"/>
    
    <fieldType name="string" class="solr.StrField"/>
+
+   <field name="signatureField" type="string" indexed="true" stored="false"/>
     
    <field name="fAgain" type="text" indexed="true" stored="true"/>
    <field name="fAgain" type="text" indexed="true" stored="true"/>
 
    <dynamicField name="*_twice"  type="text"  indexed="true"  stored="true"/>
    <dynamicField name="*_twice"  type="text"  indexed="true"  stored="true"/>
+
+   <dynamicField name="*_sS" type="string"  indexed="false" stored="true"/>
 
  </fields>
 
