@@ -39,6 +39,8 @@
  <fields>
    <field name="id" type="sint" indexed="true" stored="true" required="false"/>
    <field name="subject" type="text" indexed="true" stored="true"/>
+   <field name="signatureField" type="string" indexed="true" stored="false"/>
+   <dynamicField name="*_sS" type="string"  indexed="false" stored="true"/>
  </fields>
 
  <defaultSearchField>subject</defaultSearchField>
